--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,7 +5,7 @@ body {
 
 .nav-bar{
     width: screen;
-    background: green;
+    /* background: green; */
     display: flex;
     justify-content: space-between;
     padding: 1rem 1rem;
@@ -13,11 +13,12 @@ body {
 
 .box{
     width:fit-content;
-    background-color: blue;
+    /* background-color: blue; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 6rem;
+    align-content: center;
+    gap: 4rem;
 }
 
 .profile-picture img{
@@ -25,4 +26,8 @@ body {
     height: 3rem;
     object-fit: cover;
     border-radius: 100%;
+}
+
+a {
+    text-decoration: none;
 }
