Added landing page, signup, login

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -8,7 +8,7 @@ body {
     /* background: green; */
     display: flex;
     justify-content: space-between;
-    padding: 1rem 1rem;
+    padding: .3rem .3rem;
 }
 
 .box{
@@ -30,4 +30,10 @@ body {
 
 a {
     text-decoration: none;
+    color: black;
+}
+
+.buscar-libro::placeholder {
+    font-size: 15px;
+    align-self: center;
 }
