--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -5,15 +5,13 @@ body {
 
 .nav-bar {
   width: screen;
-  /* background: green; */
   display: flex;
   justify-content: space-between;
-  padding: 0.3rem 0.3rem;
+  padding: 0.5rem 1rem;
 }
 
 .box {
   width: fit-content;
-  /* background-color: blue; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,8 +53,40 @@ a {
 body {
   font-family: "Roboto";
 }
-/* 
-.select-categorias .row{
-    display: flex;
-    justify-content: space-around;
+
+/* GRID */
+.parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  /* grid-template-rows: repeat(5, 1fr); */
+  grid-column-gap: 1rem;
+  grid-row-gap: 2rem;
+  padding: 1.5rem 1.5rem;
+}
+.libro {
+  /* background-color: red; */
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.parent div img {
+  height: 12rem;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+/* .div1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.div3 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.div4 {
+  grid-area: 1 / 4 / 2 / 5;
 } */
