--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -58,13 +58,11 @@ body {
 .parent {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  /* grid-template-rows: repeat(5, 1fr); */
   grid-column-gap: 1rem;
   grid-row-gap: 2rem;
   padding: 1.5rem 1.5rem;
 }
 .libro {
-  /* background-color: red; */
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -74,19 +72,7 @@ body {
 
 .parent div img {
   height: 12rem;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 1rem;
 }
 
-/* .div1 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-.div2 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-.div3 {
-  grid-area: 1 / 3 / 2 / 4;
-}
-.div4 {
-  grid-area: 1 / 4 / 2 / 5;
-} */
