--- a/frontend/styles/libro-info.css
+++ b/frontend/styles/libro-info.css
@@ -64,11 +64,11 @@ body {
   padding: 1rem 0 1rem 0;
 }
 
-strong{
+.cont-titulo strong{
   margin: 0;
   display: flex;
   align-items: center;
-  font-size: 22px;
+  font-size: 24px;
 }
 
 .cont-info {
@@ -149,14 +149,15 @@ p {
 
 .portada img {
   border-radius: 0.5rem;
+  height: 19rem;
 }
 
 .subio-sinopsis {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   /* background-color: red; */
-    max-width: 54rem; 
+    max-width: 32rem; 
     min-width: 22rem;
 
 }
@@ -170,6 +171,15 @@ p {
   flex-direction: row;
   align-items: center;
   gap: 0.3rem;
+}
+
+.element strong{
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 12rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .etiquetas-reportar {
