--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -60,7 +60,13 @@ body {
   grid-template-columns: repeat(5, 1fr);
   grid-column-gap: 1rem;
   grid-row-gap: 2rem;
-  padding: 1.5rem 1.5rem;
+  padding: 1.5rem 24rem 1.5rem 24rem;
+}
+
+.cont-libro{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .libro {
   display: flex;
@@ -68,6 +74,7 @@ body {
   gap: 0.5rem;
   justify-content: center;
   align-items: center;
+  width: fit-content;
 }
 
 .parent div img {
