--- a/frontend/styles/libro-info.css
+++ b/frontend/styles/libro-info.css
@@ -128,6 +128,10 @@ p {
   width: fit-content;
 }
 
+.icon{
+  filter:invert(100%)
+}
+
 .texto{
   text-align: justify;
 }
@@ -201,6 +205,12 @@ p {
   /* max-width: 54rem;  */
   /* width: 48rem;  */
   /* background-color: blue; */
+}
+
+.fav{
+  height: 1.8rem;
+  width: 1.8rem;
+  object-fit: cover;
 }
 
 .perfil img {
